--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link href="css/bootstrap-table.css" rel="stylesheet" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/datepicker3.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PizzaHUST</title>
 </head>
@@ -11,6 +15,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="js/lumino.glyphs.js"></script>
 </body>
 
 </html>
